# aiida-plugin-openmx

./: README.md  pyproject.toml
input/: dict_to_file.py
src/: __init__.py  cli.py
src/aiida_openmx/: __init__.py  bandplot.py  calculations.py  helpers.py  parsers.py
src/aiida_openmx/data/: pseudopotentials.csv
src/aiida_openmx/input/: definition_of_atomic_species.py  dict_to_file.py  flat.py  jx_input.py  pseudopotentials.csv  structure.py  symmetrize_structure.py
src/aiida_openmx/sd_model/: sd_model.py
tests/: __init__.py  common.py  submit.py  test_bands.py  test_config.py  test_jx.py  test_non_collinear.py  test_parser.py
tests/example_outputs/: Febcc2.std  Mn3NiN_non_collinear.std  jx.std
